--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "react-icons": "^5.0.1",
     "react-scripts": "5.0.1",
     "sass": "^1.70.0",
+    "swiper": "^11.0.5",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
